src/test/deca/syntax/invalid/homemade/parser/test/test_pars_inv_instruction_primary_cast_no_expr.deca
// Description:
//    tests de programme incorrect syntaxiquement pour cast
//
// Resultats:
//    Ligne 11 : Erreur ( expected "("" after ")")
//    
//
// Historique:
//    cree le 04/01/2023
{
    (int) iden;
}